# mcincos

./: .gitignore  .gitmodules  CMakeLists.txt  b  c.txt  cincos.iso  ovmf_vars.fd  run
.cache/clangd/index/: cpu_local.c.A74217BD20CC3004.idx  cpu_local.h.EF2E58E3FE7B58AB.idx  entry.S.5B90BC67F331EDEB.idx  gdt.c.121E26D9E2E3B2DD.idx  gdt.h.47A1653FC2D56E8A.idx  gdt_flush.S.9AFBA841E07FD178.idx  idt.c.FD186BC4C0162BA3.idx  idt.h.E31E2058FC179175.idx  idt_handler.c.C7354B5B5B5AF6CF.idx  io.h.82604D18DA56498C.idx  irq.c.2086A4BBCBF64BF8.idx  irq.h.FEA84FD6FDA2236D.idx  isr.S.D79D27ABAD82BBB9.idx  kmain.c.66B69F5D344D7D73.idx  limine.c.98FC0B98C924F9AE.idx  limine.h.1001016088EAAA99.idx  msr.h.2A39B8D0ED3D651E.idx  panic.c.1A04EB678156241E.idx  panic.h.0AF1E216992304D1.idx  pic.c.99AC440A0D69AE79.idx  pic.h.D08DFCAF576C1F7A.idx  pit.c.472906F8AC4C1923.idx  pit.h.5811C74DE9B75D70.idx  pmm.c.5E539B27433CA977.idx  pmm.h.8DD39D013F381AE3.idx  print.c.40858B275B9F197F.idx  print.h.40ECA7C2B3F56E5F.idx  regs.h.D2FC232778DA467A.idx  sched.c.AEDCAB59B83914C7.idx  sched.h.897354EED75770AC.idx  string.c.38B9188C5951CBA6.idx  string.h.B4DEF79B06577128.idx  syscall.c.5865734C7997DFD4.idx  syscall.h.3935145519D5E51A.idx  syscall_entry.S.D1AD90C72650A090.idx  vmm.c.45C0FC19555C5931.idx  vmm.h.D0A4323CD027CE48.idx
docs/design/: asm.md  toolchain.md
iso/: cincos  limine.conf
iso/EFI/BOOT/: BOOTX64.EFI
iso/boot/: cincos  limine-bios.sys  limine.conf
kernel/: CMakeLists.txt
kernel/arch/x86_64/boot/: entry.S  limine.c  linker.ld
kernel/arch/x86_64/cpu/: arch.c  arch.h  cpu_local.c  cpu_local.h  cpuid.h  gdt.c  gdt.h  gdt_flush.S  idt.c  idt.h  idt_handler.c  io.h  irq.c  irq.h  isr.S  lapic.c  lapic.h  msr.h  pic.c  pic.h  pit.c  pit.h  regs.h  relax.c  relax.h  syscall.S  syscall.c  syscall.h  syscall_entry.S  timer.c  timer.h  tsc.h
kernel/boot/: boot_info.c  boot_info.h
kernel/core/: kmain.c  panic.c  panic.h  print.c  print.h  sched.c  sched.h  string.c  string.h  timerq.c  timerq.h
kernel/mem/: pmm.c  vmm.c  vmm.h
kernel/mm/: mmio.c  mmio.h  pmm.c  pmm.h  vmm.c  vmm.h
scripts/: build_iso.sh  run_qemu.sh
toolchain/: x86_64-elf.cmake
